--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +15,14 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "js-cookie": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.4.0",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
