--- a/package.json
+++ b/package.json
@@ -17,17 +17,23 @@
     "@zeit/next-sass": "^1.0.1",
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "formik": "^1.5.4",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.4.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.4",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-datepicker": "^1.8.0",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.2",
     "react-typed": "^1.1.2",
     "reactstrap": "^8.0.0"
   }
