--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "async-lock": "^1.1.3",
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "emotion": "^9.2.12",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "formik": "^1.5.4",
+    "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.4.0",
@@ -33,8 +36,14 @@
     "react": "^16.8.6",
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.8.6",
+    "react-emotion": "^9.2.12",
     "react-moment": "^0.9.2",
+    "react-toastify": "^5.1.0",
     "react-typed": "^1.1.2",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "slate": "^0.44.6",
+    "slate-html-serializer": "^0.7.39",
+    "slate-react": "^0.21.12",
+    "slugify": "^1.3.3"
   }
 }
