--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js"
+    "start": "NODE_ENV=production node server/index.js",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "async-lock": "^1.1.3",
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "babel-plugin-transform-define": "^1.3.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "emotion": "^9.2.12",
